--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,23 @@
-.App{
+/* .App{
   text-align: center;
-}
-
+} */
 
 body{
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+nav{
+  position: fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height: 100px;
+  padding: 10px 100px;
+
+}
+
+h1, p{
+  text-align: center;
 }
