--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* .App{
   text-align: center;
 } */
-
+@import url('https://fonts.googleapis.com/css?family=Roboto:700&display=swap');
 body{
   margin: 0;
   padding: 0;
@@ -32,7 +32,35 @@ body{
   margin:0;
   padding:0;
   display: flex;
+
 }
+
+.nav ul li{
+  list-style: none;
+}
+
+.nav ul li a{
+  line-height: 80px;
+  color: #262626;
+  padding: 5px 20px;
+  font-family: 'Roboto', sans-serif;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: .5s;
+}
+
+.nav ul li a.active,
+.nav ul li a:hover{
+  color: #fff;
+  background: grey;
+}
+
+section.sec1 img{
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+}
+
 h1, p{
   text-align: center;
 }
